--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "2.3.0"
   },
   "dependencies": {
+    "random-hex-color": "^1.0.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "uuidv4": "^2.0.0"
